--- a/css/style.css
+++ b/css/style.css
@@ -22,42 +22,6 @@ body {
     width:80%;
 }
 
-.menu { 
-    text-align: center; 
-}
-
-.menu ul { 
-    display: inline-table;
-}
-
-.menu ul li {
-    display: inline;
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: lightskyblue;
-}
-  
-li {
-    float: left;
-}
-  
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-  
-li a:hover {
-    background-color: lightslategray;
-}
-
 header, h1{
     font-family: 'Patua One';
     text-align: center;
@@ -112,4 +76,81 @@ footer {
 h2 {
     font-family: 'Patua One';
     text-align: center;
+}
+
+.enviar {
+    background-color: lightgray;
+    color: black;
+    font-size: 20px;
+    border-radius: 12px;
+    border: 2px solid #555555;
+}
+  
+.enviar:hover {
+    background-color: #555555;
+    color: white;
+}
+
+.menu { 
+    text-align: center; 
+}
+
+.menu ul { 
+    display: inline-table;
+}
+
+.menu ul li {
+    display: inline;
+}
+
+@media only screen and (min-width: 300px) and (max-width: 991px) {
+    /* Tables o teléfonos: */
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        width: 200px;
+        background-color: lightskyblue;
+    }
+
+    li {
+        float: none;
+    }
+      
+    li a {
+        display: block;
+        color: #000;
+        padding: 8px 16px;
+        text-decoration: none;
+    }
+      
+    li a:hover {
+        background-color: lightslategray;
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: lightskyblue;
+    }
+      
+    li {
+        float: left;
+    }
+      
+    li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+    }
+      
+    li a:hover {
+        background-color: lightslategray;
+    }
 }
